# arena

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  VISION.md  VISUAL.md  debug_cartpole  debug_cartpole.rs  debug_cylinder_orientation.rs  debug_cylinder_scene.rs  debug_cylinders  debug_cylinders.rs  debug_joint_creation  debug_joint_creation.rs  debug_orientation  debug_orientation.rs  debug_physics.rs  debug_shader.wgsl  run_demo.sh  test_cartpole.sh  test_cartpole_physics.rs  test_cylinder_render.sh  test_sizes.rs
.cargo/: config.toml
benches/: empty.rs
crates/compute/: Cargo.toml  README.md
crates/compute/src/: backend.rs  cpu.rs  cpu_backend.rs  gpu.rs  kernels.rs  layout.rs  lib.rs  wgpu_backend.rs
crates/compute/src/backend/: mock_cpu.rs  mod.rs  wgpu_metal.rs
crates/compute/src/kernels/: add_broadcast_op.rs  add_op.rs  clamp_op.rs  detect_contacts_box_cylinder.rs  detect_contacts_box_op.rs  detect_contacts_cylinder_cylinder.rs  detect_contacts_sdf_op.rs  detect_contacts_sphere.rs  detect_contacts_sphere_cylinder.rs  div_op.rs  exp_op.rs  expand_instances_op.rs  gather_op.rs  integrate_bodies_op.rs  log_op.rs  matmul_op.rs  max_op.rs  min_op.rs  mod.rs  mul_op.rs  neg_op.rs  reduce_max_op.rs  reduce_mean_op.rs  reduce_sum_op.rs  relu_op.rs  rng_normal_op.rs  rng_op.rs  rsqrt_op.rs  scatter_add_op.rs  segmented_reduce_sum_op.rs  sigmoid_op.rs  solve_ball_joints_op.rs  solve_contacts_pbd_op.rs  solve_fixed_joints_op.rs  solve_joints_pbd_op.rs  solve_prismatic_joints_op.rs  solve_revolute_joints_op.rs  sqrt_op.rs  sub_op.rs  tanh_op.rs  (+2 more)
crates/compute/tests/: gpu.rs
crates/ml/: Cargo.toml
crates/phenotype/: Cargo.toml
crates/physics/: Cargo.toml  README.md
crates/physics/benches/: physics.rs  scene.rs
crates/physics/src/: builder.rs  cartpole.rs  cartpole_test.rs  error.rs  gpu_executor.rs  integrator.rs  lib.rs  shapes.rs  simulation.rs  spatial_grid_ext.rs  transform.rs  types.rs
crates/physics/src/collision/: README.md  box_box.rs  box_plane.rs  broad_phase.rs  cylinder_plane.rs  dispatcher.rs  mod.rs  primitives.rs  response.rs  sphere_box.rs  sphere_cylinder.rs  sphere_plane.rs  sphere_sphere.rs  stubs.rs  unified_example.rs
crates/physics/src/steps/: contact.rs  integration.rs  joint.rs  mod.rs
crates/physics/tests/: api.rs  cartpole_entity_tests.rs  cartpole_physics_comprehensive.rs  cartpole_physics_tests.rs  cartpole_scene_integration.rs  collision_debug.rs  comprehensive_collisions.rs  cube.rs  cylinder_orientation_data_flow.rs  debug_cylinder_orientation.rs  debug_grid_layout.rs  forces.rs  free_fall.rs  joint.rs  mass.rs  material_properties.rs  orientation.rs  pipeline_verification.rs  primitives.rs  revolute_joint_tests.rs  scene.rs  simple_cartpole_scene.rs  spatial_grid.rs  test_cart_acceleration_torque.rs  test_cartpole_attachment.rs  test_cartpole_control.rs  test_cylinder_orientation.rs  test_cylinder_rendering_debug.rs  test_cylinder_transform.rs  test_cylinder_visual_debug.rs  test_final_cartpole_physics.rs  test_fixed_cart.rs  test_pole_attachment.rs  test_pole_hanging_debug.rs  test_pole_physics_update.rs  test_pole_standing_vs_hanging.rs  test_pole_with_initial_angle.rs  test_quaternion_rotation.rs  test_revolute_joint_rigid.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: camera.rs  gpu_types.rs  lib.rs  pipeline.rs  plane.rs  renderer.rs  renderer.wgsl  run.rs  scene.rs  sdf.wgsl  sdf_renderer.rs  shader.wgsl  state.rs
crates/render/srcs/: df_renderer.rs
crates/render/tests/: cartpole_orientation_test.rs  cylinder_gpu_conversion.rs  cylinder_rotation_debug.rs  debug_angular_velocity.rs  debug_cylinder_rendering.rs  debug_orientation.rs  gpu_shader_execution.rs  main_application_flow.rs  pipeline_integration_test.rs  scene_manager_integration.rs  scene_update_test.rs  sdf_shader.rs  shader_orientation_verification.rs  shader_rotation_comprehensive.rs  shader_rotation_test.rs  simple_transform_test.rs  test_cylinder_rotation_debug.rs  test_quaternion_math.rs  transform_buffer_test.rs  verify_cylinder_transform.rs  verify_gpu_orientation.rs
crates/rl/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: app.rs  main.rs  watcher.rs
crates/runtime/tests/: .gitkeep  main_loop_tests.rs  shader_compile.rs
docs/: README.md  screenshot.md
jaxs/: Cargo.toml
jaxs/src/: app.rs  lib.rs  main.rs  watcher.rs
prompts/phase1_core_physics_foundation/: task1a_implement_complete_joint_system.txt  task1b_complete_collision_detection_matrix.txt  (+1 more)
shaders/: add.wgsl  add_broadcast.wgsl  clamp.wgsl  debug_cylinder.wgsl  detect_contacts_box.wgsl  detect_contacts_box_cylinder.wgsl  detect_contacts_cylinder_cylinder.wgsl  detect_contacts_sdf.wgsl  detect_contacts_sphere.wgsl  detect_contacts_sphere_cylinder.wgsl  div.wgsl  elementwise.wgsl  exp.wgsl  expand_instances.wgsl  gather.wgsl  integrate_bodies.wgsl  integrate_euler.wgsl  log.wgsl  matmul.wgsl  max.wgsl  min.wgsl  mul.wgsl  neg.wgsl  noop.wgsl  reduce_max.wgsl  reduce_mean.wgsl  reduce_sum.wgsl  relu.wgsl  rng_normal.wgsl  rsqrt.wgsl  scatter_add.wgsl  segmented_reduce_sum.wgsl  sigmoid.wgsl  solve_ball_joints.wgsl  solve_contacts_pbd.wgsl  solve_fixed_joints.wgsl  solve_joints_pbd.wgsl  solve_prismatic_joints.wgsl  sqrt.wgsl  sub.wgsl  (+2 more)
tests/: collision.rs  collision_matrix_comprehensive.rs  forces.rs  free_fall.rs  joint.rs  joint_comprehensive.rs  scene.rs
(+39 files in other folders)
