[package]
name = "jaxs"
version = "0.1.0"
edition = "2021"
description = "Documentation entry point for JAXS (Just Another Exploration Substrate)."

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
notify = "6.1"

compute = { path = "../crates/compute" }
physics = { path = "../crates/physics" }
ml = { path = "../crates/ml" }
phenotype = { path = "../crates/phenotype" }
render = { path = "../crates/render", optional = true }

[features]
render = ["dep:render"] 