[package]
name = "jaxs"
version = "0.1.0"
edition = "2021"
description = "Documentation entry point for JAXS (Just Another Exploration Substrate)."

[features]
render = ["dep:render"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
notify = "6.1"

compute = { path = "../crates/compute" }
physics = { path = "../crates/physics" }
ml = { path = "../crates/ml" }
phenotype = { path = "../crates/phenotype" }
render = { path = "../crates/render", optional = true } 