[package]
name = "compute"
version = "0.1.0"
edition = "2021"

[features]
mock = []
metal = ["dep:wgpu"]

[dependencies]
thiserror = "1.0"
wgpu = { version = "0.19", features=["metal"], optional = true }
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
# No dev-dependencies needed for now beyond what the tests might use implicitly via std
