[package]
name = "compute"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpu"]
cpu = []
gpu = ["dep:wgpu", "dep:pollster", "dep:parking_lot"]

[dependencies]
thiserror = "1.0"
bytemuck = { version = "1.15", features = ["derive"] }
tracing = "0.1"

wgpu = { version = "0.20", optional = true }
pollster = { version = "0.3", optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
# No dev-dependencies needed for now beyond what the tests might use implicitly via std
