[package]
name = "compute"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster", "dep:anyhow"]

[dependencies]
thiserror = "1.0"
bytemuck = { version = "1.12.3", features = ["derive"] }
tracing = "0.1"

wgpu = { version = "0.19.1", optional = true }
pollster = { version = "0.3.0", optional = true }
anyhow = { version = "1.0.81", optional = true }

[dev-dependencies]
fastrand = "2.0.1"
tracing-subscriber = "0.3.18"
