[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
pollster = "0.3"
tracing = "0.1"
wgpu = "0.19"
winit = { version = "0.29", features = ["wayland"] }
physics = { path = "../physics" }
bytemuck = { version = "1.12", features = ["derive"] }
glam = "0.27"
image = { version = "0.24", default-features = false, features = ["png"] }
chrono = "0.4"

[dev-dependencies]
naga = { workspace = true }
